<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    tools:context=".ConfigurationActivity">

    <LinearLayout android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".50">

        <TextView
            android:id="@+id/text_ColorScheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confInfo"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FFTSize" />
        <SeekBar
            android:id="@+id/seekBar_FFTSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:max="10"
            android:progress="7"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
        <TextView
            android:id="@+id/text_FFTSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/SamplesPerUpdate" />
        <SeekBar
            android:id="@+id/seekBar_SamplesPerUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:max="12"
            android:progress="10"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
        <TextView
            android:id="@+id/text_SamplesPerUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/minimumFrequency" />
        <SeekBar
            android:id="@+id/seekBar_MinimumFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:max="15"
            android:progress="10"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
        <TextView
            android:id="@+id/text_MinimumFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/maximumFrequency" />
        <SeekBar
            android:id="@+id/seekBar_MaximumFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:max="15"
            android:progress="10"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
        <TextView
            android:id="@+id/text_MaximumFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/minimumAmplitude" />
        <SeekBar
            android:id="@+id/seekBar_MinimumAmplitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:max="10"
            android:progress="10"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
        <TextView
            android:id="@+id/text_MinimumAmplitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/maximumAmplitude" />
        <SeekBar
            android:id="@+id/seekBar_MaximumAmplitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:max="10"
            android:progress="10"
            android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
        <TextView
            android:id="@+id/text_MaximumAmplitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>